// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxCore type:default checked:false 1`] = `
<input
  aria-invalid={false}
  checked={false}
  className=""
  disabled={false}
  onChange={[Function]}
  onClick={[Function]}
  style={
    {
      ":active": {
        "backgroundColor": "#dae6fd",
        "borderColor": "#1865f2",
        "borderWidth": 2,
      },
      ":focusVisible": {
        "backgroundColor": "#ffffff",
        "borderColor": "#1865f2",
        "borderWidth": 2,
      },
      ":hover": {
        "backgroundColor": "#ffffff",
        "borderColor": "#1865f2",
        "borderWidth": 2,
      },
      "MozAppearance": "none",
      "WebkitAppearance": "none",
      "appearance": "none",
      "backgroundColor": "#ffffff",
      "borderColor": "rgba(33,36,44,0.50)",
      "borderRadius": 3,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "border-box",
      "height": 16,
      "margin": 0,
      "minHeight": 16,
      "minWidth": 16,
      "outline": "none",
      "width": 16,
    }
  }
  type="checkbox"
/>
`;

exports[`CheckboxCore type:default checked:true 1`] = `
[
  <input
    aria-invalid={false}
    checked={true}
    className=""
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
    style={
      {
        ":active": {
          "background": "#1b50b3",
          "boxShadow": "0 0 0 1px #ffffff, 0 0 0 3px #1b50b3",
        },
        ":focusVisible": {
          "boxShadow": "0 0 0 1px #ffffff, 0 0 0 3px #1865f2",
        },
        ":hover": {
          "boxShadow": "0 0 0 1px #ffffff, 0 0 0 3px #1865f2",
        },
        "MozAppearance": "none",
        "WebkitAppearance": "none",
        "appearance": "none",
        "backgroundColor": "#1865f2",
        "borderRadius": 3,
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "height": 16,
        "margin": 0,
        "minHeight": 16,
        "minWidth": 16,
        "outline": "none",
        "width": 16,
      }
    }
    type="checkbox"
  />,
  <svg
    className=""
    height={16}
    style={
      {
        "display": "inline-block",
        "flexGrow": 0,
        "flexShrink": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  >
    <path
      d="M11.263 4.324a1 1 0 1 1 1.474 1.352l-5.5 6a1 1 0 0 1-1.505-.036l-2.5-3a1 1 0 1 1 1.536-1.28L6.536 9.48l4.727-5.157z"
      fill="#ffffff"
    />
  </svg>,
]
`;

exports[`CheckboxCore type:disabled checked:false 1`] = `
<input
  aria-invalid={false}
  checked={false}
  className=""
  disabled={true}
  onChange={[Function]}
  onClick={[Function]}
  style={
    {
      "MozAppearance": "none",
      "WebkitAppearance": "none",
      "appearance": "none",
      "backgroundColor": "#f7f8fa",
      "borderColor": "rgba(33,36,44,0.16)",
      "borderRadius": 3,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "border-box",
      "cursor": "auto",
      "height": 16,
      "margin": 0,
      "minHeight": 16,
      "minWidth": 16,
      "outline": "none",
      "width": 16,
    }
  }
  type="checkbox"
/>
`;

exports[`CheckboxCore type:disabled checked:true 1`] = `
[
  <input
    aria-invalid={false}
    checked={true}
    className=""
    disabled={true}
    onChange={[Function]}
    onClick={[Function]}
    style={
      {
        "MozAppearance": "none",
        "WebkitAppearance": "none",
        "appearance": "none",
        "backgroundColor": "#f7f8fa",
        "borderColor": "rgba(33,36,44,0.16)",
        "borderRadius": 3,
        "borderStyle": "solid",
        "borderWidth": 1,
        "boxSizing": "border-box",
        "cursor": "auto",
        "height": 16,
        "margin": 0,
        "minHeight": 16,
        "minWidth": 16,
        "outline": "none",
        "width": 16,
      }
    }
    type="checkbox"
  />,
  <svg
    className=""
    height={16}
    style={
      {
        "display": "inline-block",
        "flexGrow": 0,
        "flexShrink": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  >
    <path
      d="M11.263 4.324a1 1 0 1 1 1.474 1.352l-5.5 6a1 1 0 0 1-1.505-.036l-2.5-3a1 1 0 1 1 1.536-1.28L6.536 9.48l4.727-5.157z"
      fill="rgba(33,36,44,0.32)"
    />
  </svg>,
]
`;

exports[`CheckboxCore type:error checked:false 1`] = `
<input
  aria-invalid={true}
  checked={false}
  className=""
  disabled={false}
  onChange={[Function]}
  onClick={[Function]}
  style={
    {
      ":active": {
        "backgroundColor": "#fceeec",
        "borderColor": "#9e271d",
        "borderWidth": 2,
      },
      ":focusVisible": {
        "backgroundColor": "#fceeec",
        "borderColor": "#d92916",
        "borderWidth": 2,
      },
      ":hover": {
        "backgroundColor": "#fceeec",
        "borderColor": "#d92916",
        "borderWidth": 2,
      },
      "MozAppearance": "none",
      "WebkitAppearance": "none",
      "appearance": "none",
      "backgroundColor": "#fceeec",
      "borderColor": "#d92916",
      "borderRadius": 3,
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "border-box",
      "height": 16,
      "margin": 0,
      "minHeight": 16,
      "minWidth": 16,
      "outline": "none",
      "width": 16,
    }
  }
  type="checkbox"
/>
`;

exports[`CheckboxCore type:error checked:true 1`] = `
[
  <input
    aria-invalid={true}
    checked={true}
    className=""
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
    style={
      {
        ":active": {
          "background": "#9e271d",
          "boxShadow": "0 0 0 1px #ffffff, 0 0 0 3px #9e271d",
        },
        ":focusVisible": {
          "boxShadow": "0 0 0 1px #ffffff, 0 0 0 3px #d92916",
        },
        ":hover": {
          "boxShadow": "0 0 0 1px #ffffff, 0 0 0 3px #d92916",
        },
        "MozAppearance": "none",
        "WebkitAppearance": "none",
        "appearance": "none",
        "backgroundColor": "#d92916",
        "borderRadius": 3,
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "height": 16,
        "margin": 0,
        "minHeight": 16,
        "minWidth": 16,
        "outline": "none",
        "width": 16,
      }
    }
    type="checkbox"
  />,
  <svg
    className=""
    height={16}
    style={
      {
        "display": "inline-block",
        "flexGrow": 0,
        "flexShrink": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  >
    <path
      d="M11.263 4.324a1 1 0 1 1 1.474 1.352l-5.5 6a1 1 0 0 1-1.505-.036l-2.5-3a1 1 0 1 1 1.536-1.28L6.536 9.48l4.727-5.157z"
      fill="#ffffff"
    />
  </svg>,
]
`;

exports[`RadioCore type:default checked:false 1`] = `
<input
  aria-invalid={false}
  checked={false}
  className=""
  disabled={false}
  onChange={[Function]}
  onClick={[Function]}
  style={
    {
      ":active": {
        "backgroundColor": "#dae6fd",
        "borderColor": "#1865f2",
        "borderWidth": 2,
      },
      ":focusVisible": {
        "backgroundColor": "#ffffff",
        "borderColor": "#1865f2",
        "borderWidth": 2,
      },
      ":hover": {
        "backgroundColor": "#ffffff",
        "borderColor": "#1865f2",
        "borderWidth": 2,
      },
      "MozAppearance": "none",
      "WebkitAppearance": "none",
      "appearance": "none",
      "backgroundColor": "#ffffff",
      "borderColor": "rgba(33,36,44,0.50)",
      "borderRadius": "50%",
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "border-box",
      "height": 16,
      "margin": 0,
      "minHeight": 16,
      "minWidth": 16,
      "outline": "none",
      "width": 16,
    }
  }
  type="radio"
/>
`;

exports[`RadioCore type:default checked:true 1`] = `
<input
  aria-invalid={false}
  checked={true}
  className=""
  disabled={false}
  onChange={[Function]}
  onClick={[Function]}
  style={
    {
      ":active": {
        "borderColor": "#1b50b3",
        "boxShadow": "0 0 0 1px #ffffff, 0 0 0 3px #1b50b3",
      },
      ":focusVisible": {
        "boxShadow": "0 0 0 1px #ffffff, 0 0 0 3px #1865f2",
      },
      ":hover": {
        "boxShadow": "0 0 0 1px #ffffff, 0 0 0 3px #1865f2",
      },
      "MozAppearance": "none",
      "WebkitAppearance": "none",
      "appearance": "none",
      "backgroundColor": "#ffffff",
      "borderColor": "#1865f2",
      "borderRadius": "50%",
      "borderStyle": "solid",
      "borderWidth": 4,
      "boxSizing": "border-box",
      "height": 16,
      "margin": 0,
      "minHeight": 16,
      "minWidth": 16,
      "outline": "none",
      "width": 16,
    }
  }
  type="radio"
/>
`;

exports[`RadioCore type:disabled checked:false 1`] = `
<input
  aria-invalid={false}
  checked={false}
  className=""
  disabled={true}
  onChange={[Function]}
  onClick={[Function]}
  style={
    {
      "MozAppearance": "none",
      "WebkitAppearance": "none",
      "appearance": "none",
      "backgroundColor": "#f7f8fa",
      "borderColor": "rgba(33,36,44,0.16)",
      "borderRadius": "50%",
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "border-box",
      "cursor": "auto",
      "height": 16,
      "margin": 0,
      "minHeight": 16,
      "minWidth": 16,
      "outline": "none",
      "width": 16,
    }
  }
  type="radio"
/>
`;

exports[`RadioCore type:disabled checked:true 1`] = `
[
  <input
    aria-invalid={false}
    checked={true}
    className=""
    disabled={true}
    onChange={[Function]}
    onClick={[Function]}
    style={
      {
        "MozAppearance": "none",
        "WebkitAppearance": "none",
        "appearance": "none",
        "backgroundColor": "#f7f8fa",
        "borderColor": "rgba(33,36,44,0.16)",
        "borderRadius": "50%",
        "borderStyle": "solid",
        "borderWidth": 1,
        "boxSizing": "border-box",
        "cursor": "auto",
        "height": 16,
        "margin": 0,
        "minHeight": 16,
        "minWidth": 16,
        "outline": "none",
        "width": 16,
      }
    }
    type="radio"
  />,
  <span
    style={
      {
        "backgroundColor": "rgba(33,36,44,0.32)",
        "borderRadius": "50%",
        "height": 8,
        "left": 4,
        "position": "absolute",
        "top": 4,
        "width": 8,
      }
    }
  />,
]
`;

exports[`RadioCore type:error checked:false 1`] = `
<input
  aria-invalid={true}
  checked={false}
  className=""
  disabled={false}
  onChange={[Function]}
  onClick={[Function]}
  style={
    {
      ":active": {
        "backgroundColor": "#fceeec",
        "borderColor": "#9e271d",
        "borderWidth": 2,
      },
      ":focusVisible": {
        "backgroundColor": "#fceeec",
        "borderColor": "#d92916",
        "borderWidth": 2,
      },
      ":hover": {
        "backgroundColor": "#fceeec",
        "borderColor": "#d92916",
        "borderWidth": 2,
      },
      "MozAppearance": "none",
      "WebkitAppearance": "none",
      "appearance": "none",
      "backgroundColor": "#fceeec",
      "borderColor": "#d92916",
      "borderRadius": "50%",
      "borderStyle": "solid",
      "borderWidth": 1,
      "boxSizing": "border-box",
      "height": 16,
      "margin": 0,
      "minHeight": 16,
      "minWidth": 16,
      "outline": "none",
      "width": 16,
    }
  }
  type="radio"
/>
`;

exports[`RadioCore type:error checked:true 1`] = `
<input
  aria-invalid={true}
  checked={true}
  className=""
  disabled={false}
  onChange={[Function]}
  onClick={[Function]}
  style={
    {
      ":active": {
        "borderColor": "#9e271d",
        "boxShadow": "0 0 0 1px #ffffff, 0 0 0 3px #9e271d",
      },
      ":focusVisible": {
        "boxShadow": "0 0 0 1px #ffffff, 0 0 0 3px #d92916",
      },
      ":hover": {
        "boxShadow": "0 0 0 1px #ffffff, 0 0 0 3px #d92916",
      },
      "MozAppearance": "none",
      "WebkitAppearance": "none",
      "appearance": "none",
      "backgroundColor": "#ffffff",
      "borderColor": "#d92916",
      "borderRadius": "50%",
      "borderStyle": "solid",
      "borderWidth": 4,
      "boxSizing": "border-box",
      "height": 16,
      "margin": 0,
      "minHeight": 16,
      "minWidth": 16,
      "outline": "none",
      "width": 16,
    }
  }
  type="radio"
/>
`;
